--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <h1>Touch to start audio</h1>
+    <!-- <h1>Touch to start audio</h1> -->
     <script src="sketch.js"></script>
   </body>
 </html>
