v9 - Back to WAV files

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Wardies Eno Lightboxes</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="libraries/p5.min.js"></script>
-    <script src="libraries/p5.sound.min.js"></script>
+    <script src="SoundPlayer.js"></script>
     <meta
       name="viewport"
       content="width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=1"
