turn on HSB!!!!

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="libraries/p5.min.js"></script>
     <script src="SoundPlayer.js"></script>
+    <script src="ColorFactory.js"></script>
     <meta
       name="viewport"
       content="width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=1"
